# dynamic-calculator

./: CMakeLists.txt  README.md  abstract_calc_object.h  calculator.cpp  calculator.h  definitions.h  error.h  main.cpp  operation_collection.cpp  operation_collection.h
basic_objects/: bracket_closed.h  bracket_open.h  number.h
basic_operations/: minus_unary.h  multiply.h  plus.h
make_dll_operations_here/: divide.cpp  minus_binary.cpp  pi.cpp  power.cpp  sin.cpp
